# LowLatencyPlayground

./: .gitignore  CMakeLists.txt  README.md  profile_matching_engine.txt  profile_matching_engine2.txt  profiling_price_level_array_book_side.txt
benchmarks/: benchmark_atomic_counters.cpp  benchmark_list_vs_vector.cpp  benchmark_mutex_vs_spin_lock.cpp  benchmark_no_allocation_pipeline.cpp  benchmark_object_pool.cpp  benchmark_ring_buffer.cpp  benchmark_spsc_latency_histogram.cpp  benchmark_spsc_queue.cpp  benchmark_vector_push_back.cpp  branch_prediction_benchmark.cpp  false_sharing_demo.cpp  struct_layout_experiment.cpp
benchmarks/stage_01_measurement_basics/: benchmark_remove_if_vs_erase_if.cpp
benchmarks/stage_02_cache_locality/: aos_vs_soa_benchmark.cpp
benchmarks/stage_03_allocations_memory/: benchmark_fixed_pool.cpp  benchmark_new_delete_vs_reuse.cpp
benchmarks/stage_04_queues_and_concurrency/: benchmark_spsc_queue.cpp
benchmarks/stage_05_atomics_memory_model/: benchmark_cas_counter.cpp  benchmark_memory_order_message_passing.cpp
benchmarks/stage_06_market_data_pipeline/: benchmark_binary_feed_parser.cpp  benchmark_market_data_pipeline.cpp  benchmark_order_book.cpp  benchmark_pipeline_batching.cpp
benchmarks/stage_07_matching_engine/: benchmark_matching_engine.cpp  benchmark_matching_engine_allocation.cpp  benchmark_matching_engine_batching.cpp  benchmark_matching_engine_latency.cpp  benchmark_price_level_storage.cpp  benchmark_vector_vs_trade_buffer.cpp
benchmarks/stage_08_profiling/: benchmark_flat_matching_engine.cpp  benchmark_flat_matching_engine_hot_path.cpp  benchmark_order_id_idx.cpp  benchmark_price_level_array_book_side.cpp  benchmark_price_level_container.cpp
benchmarks/stage_09_language_level_optimization/: benchmark_alignment_scan.cpp  benchmark_branch_distribution.cpp  benchmark_branchless_select.cpp  benchmark_dependency_chain_ilp.cpp  benchmark_division_strength_reduction.cpp  benchmark_hot_cold_split.cpp  benchmark_inline_noinline.cpp  benchmark_manual_simd_price_filter.cpp  benchmark_memory_access_patterns.cpp  benchmark_optimization_levels.cpp  benchmark_ring_index_update.cpp  benchmark_simd_batch_validation.cpp  benchmark_software_prefetch.cpp
benchmarks/stage_10_low_latency_networking/macos/: benchmark_macos_socket_options.cpp  benchmark_macos_tcp_echo_roundtrip.cpp
benchmarks/stage_10_low_latency_networking/windows/: benchmark_winsock_socket_options.cpp
include/llp/: benchmark_timer.hpp  binary_feed_parser.hpp  flat_matching_engine.hpp  latency_stats.hpp  market_data_message.hpp  market_data_pipeline.hpp  matching_engine.hpp  object_pool.hpp  order.hpp  order_book.hpp  order_book_side.hpp  order_book_side_flat.hpp  order_id_index.hpp  price_level_array_book_side.hpp  ring_buffer.hpp  spin_lock.hpp  spsc_queue.hpp  trade_buffer.hpp
include/llp/net/macos/: socket_utils.hpp  tcp_socket.hpp
notes/stage_01_measurement_basics/task_01_latency_stats_timer/: review_checklist.md  task.md  theory.md
notes/stage_01_measurement_basics/task_02_vector_push_back/: review_checklist.md  task.md  theory.md
notes/stage_01_measurement_basics/task_03_list_vs_vector/: review_checklist.md  task.md  theory.md
notes/stage_02_cache_locality/task_01_false_sharing_demo/: review_checklist.md  task.md  theory.md
notes/stage_02_cache_locality/task_02_struct_layout_experiment/: review_checklist.md  task.md  theory.md
notes/stage_02_cache_locality/task_03_aos_vs_soa_benchmark/: review_checklist.md  task.md  theory.md
notes/stage_02_cache_locality/task_04_branch_prediction_benchmark/: review_checklist.md  task.md  theory.md
notes/stage_03_allocations_memory/task_01_heap_allocation_cost/: review_checklist.md  task.md  theory.md
notes/stage_03_allocations_memory/task_02_fixed_size_memory_pool/: review_checklist.md  task.md  theory.md
notes/stage_03_allocations_memory/task_03_object_pool/: review_checklist.md  task.md  theory.md
notes/stage_03_allocations_memory/task_04_no_allocation_pipeline/: review_checklist.md  task.md  theory.md
notes/stage_04_queues_and_concurrency/task_01_ring_buffer/: review_checklist.md  task.md  theory.md
notes/stage_04_queues_and_concurrency/task_02_spsc_queue/: review_checklist.md  task.md  theory.md
notes/stage_04_queues_and_concurrency/task_03_spsc_latency_histogram/: review_checklist.md  task.md  theory.md
notes/stage_05_atomics_memory_model/task_01_atomic_counter_benchmark/: review_checklist.md  task.md  theory.md
notes/stage_05_atomics_memory_model/task_02_spin_lock/: review_checklist.md  task.md  theory.md
notes/stage_05_atomics_memory_model/task_03_mutex_vs_spinlock/: review_checklist.md  task.md  theory.md
notes/stage_05_atomics_memory_model/task_04_memory_order_message_passing/: review_checklist.md  task.md  theory.md
notes/stage_05_atomics_memory_model/task_05_cas_counter_and_retry_loop/: review_checklist.md  task.md  theory.md
notes/stage_06_market_data_pipeline/task_01_binary_message_parser/: review_checklist.md  task.md  theory.md
notes/stage_06_market_data_pipeline/task_02_no_allocation_pipeline/: review_checklist.md  task.md  theory.md
notes/stage_06_market_data_pipeline/task_03_order_book_from_feed/: review_checklist.md  task.md  theory.md
notes/stage_06_market_data_pipeline/task_04_batching_and_backpressure/: review_checklist.md  task.md  theory.md
notes/stage_07_matching_engine/task_01_order_book_side/: review_checklist.md  task.md  theory.md
notes/stage_07_matching_engine/task_02_matching_engine_add_cancel_match/: review_checklist.md  task.md  theory.md
notes/stage_07_matching_engine/task_03_fast_cancel_index/: review_checklist.md  task.md  theory.md
tests/: test_benchmark_timer.cpp  test_binary_feed_parser.cpp  test_flat_matching_engine.cpp  test_latency_stats.cpp  test_market_data_pipeline.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_order_book.cpp  test_order_book_side.cpp  test_order_book_side_flat.cpp  test_order_id_index.cpp  test_price_level_array_book_side.cpp  test_ring_buffer.cpp  test_spin_lock.cpp  test_spsc_queue.cpp  test_trade_buffer.cpp
(+210 files in other folders)
